# AlviaOrange

./: .gitignore  INTEGRATION_GUIDE.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: docs.yml  python-tests.yml
alviaorange/: __init__.py  air_quality.py  cli.py  cwfis.py  hotspots.py  py.typed  risk_assessment.py  schemas.py  server.py  weather_stations.py
alviaorange/regions/: __init__.py  canada.py  usa.py
docs/: Makefile  README.md  conf.py  installation.rst  quickstart.rst
docs/_build/html/: .buildinfo  README.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: README.doctree  index.doctree  installation.doctree
docs/_build/html/_modules/: index.html  schemas.html
docs/_build/html/api/: hotspots.html  (+3 more)
docs/_static/: custom.css
docs/api/: hotspots.rst  modules.rst  risk_assessment.rst
docs/api/_autosummary/: alviaorange.risk_assessment.rst
notebooks/: 01-data-scientist-workflow.ipynb  4.2.0  air_quality.ipynb  air_quality_scale.ipynb  cwfis.ipynb  example.ipynb  fetch_active_fires.ipynb  fetch_fire_danger.ipynb  fetch_fire_history.ipynb  fetch_fire_perimeter.ipynb  fetch_forecast_weather_stations.ipynb  fetch_m3_hotspots.ipynb  fetch_reporting_weather_stations.ipynb  fetch_season_hotspots.ipynb  hotspots.ipynb  weather_stations_demo.ipynb
scripts/: calculate_risk.py  deploy_docs.py  detect_hotspots.py  run_server.py
tests/: test_air_quality.py  test_cli.py  test_cwfis.py  test_hotspots.py
(+17 files in other folders)
