[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alviaorange"
version = "0.1.0"
description = "Wildfire analytics and simulation tools"
readme = "README.md"
authors = [{ name = "AlviaOrange" }]
requires-python = ">=3.10"
keywords = ["wildfire", "analytics"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["alviaorange"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
